<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/azulLogo"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="40dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/nav_header_main_tv_nome_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_usuario" />

    <TextView
        android:id="@+id/nav_header_main_tv_login_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/login_senha" />

    <Button
        style="?materialButtonOutlinedStyle"
        android:id="@+id/nav_header_main_bt_sair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_sair_desta_conta" />

</LinearLayout>