<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="br.com.renanfretta.votoeletronico.uis.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/inicio_fragment" />

    <fragment
        android:id="@+id/nav_pauta"
        android:name="br.com.renanfretta.votoeletronico.uis.pauta.PautaConsultaFragment"
        android:label="@string/menu_pauta"
        tools:layout="@layout/pauta_consulta_fragment" />

    <fragment
        android:id="@+id/nav_sessao_votacao"
        android:name="br.com.renanfretta.votoeletronico.uis.sessaovotacao.SessaoVotacaoConsultaFragment"
        android:label="@string/menu_sessao_votacao"
        tools:layout="@layout/sessao_votacao_consulta_fragment" />

</navigation>